<resources>
    <string name="app_name">RetrofitSimpleWeather</string>
    <string name="wind">Wind</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="tempmin">T min</string>
    <string name="tempmax">T max</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="mmHg">mm Hg</string>
    <string name="speed_of_wind">m/s</string>

    <string-array name="direction_of_wind">
        <item>northern</item>
        <item>northeastern</item>
        <item>eastern</item>
        <item>southeastern</item>
        <item>southern</item>
        <item>southwestern</item>
        <item>western</item>
        <item>northwestern</item>
    </string-array>
    <string name="settings">Settings</string>
    <string name="refresh_button">Refresh</string>
    <string name="city_not_found">City Not Found, please, Change a city in Settings</string>
    <string name="location">Get Location in Log</string>
    <string name="city">City</string>
    <string name="location_summary">location</string>
    <string name="autolocdetermination_summary">Automatically locate</string>
    <string name="autolocdetermination">Auto Location</string>
    <string name="language">en</string>
</resources>
